assets/css/styles.css
@font-face{
    font-family: "Righteous-Regular";
    src: url("../fonts/Righteous-Regular.ttf");
}
@font-face{
    font-family: "Lato-Regular";
    src: url("../fonts/Lato/Lato-Regular.ttf");
}

html, body {
    background-color: #000000;
    color: #8e8d8b;
    overflow-x: hidden;

    height:100%;
    width:100%;
    margin:0;
}


#network {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0%;
    z-index: -1;
}

/*******************************/
/*home page*/
.home-page {
    overflow: hidden;
    position: relative;
    text-align: center;
    color: #8e8d8b;
    margin: 0;
    height: 100%;
}

.floater {
    font-family: "Righteous-Regular";
    color: #8e8d8b;
    opacity: 0.75;
    font-size: 110px;
    text-align: center;
    position: relative;
    animation: float 5s ease-in-out infinite;    
}

.name {
    margin-top: 10%;
    margin-bottom: 20px;
}


@keyframes float {
    0% {
        transform: translatey(0px);
    }
    50% {
        transform: translatey(35px);
    }
    100% {
        transform: translatey(0px);
    }
}

/*.grow { transition: all .2s ease-in-out; }*/
.grow:hover { transform: scale(1.1);}

.links i {
    color: #8e8d8b;
    opacity: 0.75;
    padding: 10px 15px 0 15px;
}

.links ul {
    padding: 0px;
}

.links a {
    text-decoration: none;
    margin-bottom: 80px;
}

/*******************************/
/* Blog CSS */
.blog-container {
    font-family: "Lato-Regular";
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
    font-size: 18px;
    text-align: left;

    width: 100%;
} 

.blog-container a{
    text-decoration: none;
    color: inherit;
}

/* Post CSS */
.post-container {
    font-family: "Lato-Regular";
    padding-top: 15px;
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
    font-size: 18px;
    text-align: left;
}

@media (min-width: 768px) {
    .post-container {
        width: 700px;
    }
    .blog-container {
        width: 700px;
    }
}

/*******************************/
/*MOTHER PLANT*/
.art {
    padding-top: 5%;
    padding-bottom: 5%;
}
.art video {
    width: 35%;
    height: auto;
}

@media screen and (max-device-width: 700px) {
    .art {
        padding-top: 10%;
        padding-bottom: 10%;
    }
    .art video {
        width: 95%;
        height: auto;
    }
}

